--- a/pdf-parser/requirements.txt
+++ b/pdf-parser/requirements.txt
@@ -1,5 +1,5 @@
-PyPDF2==3.0.1
-pdfplumber==0.9.0
-reportlab==4.0.4
-pandas==2.1.3
-python-dateutil==2.8.2
+PyPDF2>=3.0.1
+pdfplumber>=0.9.0
+reportlab>=4.0.4
+pandas>=2.1.2
+python-dateutil>=2.8.2
